Table jugyos {
  id int [pk]
  university_id int [ref: - universities.id]
  name string [not null]
  day enum [note: "曜日 Rails で enum を作る"]
  period int
  teacher_name string 
  date date [not null, note: "何回目の講義か特定するため"]
  closing_date datetime [not null]
  admin_user_id int [ref: - users.id]
  is_closed boolen [default: false]
}

Table rooms {
  id int [pk]
  uuid string [not null]
  jugyo_id int [ref: > jugyos.id]
  is_main_room boolen [not null, note: "大本の部屋かどうか"]
  Note: "一対一のルームの情報も入る"
}

Table user_room_messages {
  id int [pk]
  room_id int [not null, ref: > rooms.id]
  user_id int [not null, ref: > users.id]
  message text
  image string
  send_at datetime
}

Table user_rooms {
  id int [pk]
  user_id int [not null, ref: > users.id]
  room_id int [not null, ref: > rooms.id]
}

Table users {
  id int [pk]
  uuid string [not null]
  name string
  last_used_at datetime [note: "user削除できる用"]
  Note: "ルームに入ったら適当に作成"
}

Table universities {
  id int [pk]
  name string 
  name_kana string
  color string
}
